# tisa-finance

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
examples/: README.md  demo.py
tisa/: __init__.py  aligner.py  cli.py  distance.py  dp_align.py  io.py  segments.py  transforms.py  viz.py
tisa/benchmarks/: datasets.yaml  distortions.py  multi_daily.yaml  multi_intraday.yaml  run_benchmarks.py
tisa/docs/: README.md  api.md  math_spec.md
tisa/tests/: test_benchmarks_smoke.py  test_dp.py  test_invariance.py  test_optimization_analysis.py  test_performance.py  test_quality.py  test_segments.py
